fix styles for sticky header: add z-index, background-color

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -2,6 +2,9 @@
     padding: 20px;
     position: sticky;
     top: 0;
+    border-bottom: 1px solid #dddddd;
+    z-index: 3;
+    background-color: #e1f3ff;
 
     &-wrap {
         display: flex;
